test/files/neg/bug846.check
bug846.scala:9: error: type mismatch;
 found   : scala.Null(null)
 required: B
    if (a != null) f(a) else null
                             ^
one error found
